# spiceai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-cuda  Makefile  README.md  SECURITY.md  acknowledgements.md  go.mod  go.sum  version.txt
crates/data_components/: Cargo.toml
crates/data_components/src/: arrow.rs  cdc.rs  clickhouse.rs  databricks_delta.rs  databricks_spark.rs  debezium.rs  debezium_kafka.rs  delete.rs  delta_lake.rs  duckdb.rs  flight.rs  flightsql.rs  github.rs  kafka.rs  lib.rs  mysql.rs  odbc.rs  poly.rs  postgres.rs  snowflake.rs  spark_connect.rs  sqlite.rs  token_provider.rs  unity_catalog.rs
crates/data_components/src/arrow/: write.rs
crates/data_components/src/debezium/: arrow.rs  change_event.rs
crates/data_components/src/delta_lake/: pruning.rs
crates/data_components/src/dynamodb/: provider.rs
crates/data_components/src/flight/: federation.rs  stream.rs  write.rs
crates/data_components/src/flightsql/: federation.rs
crates/data_components/src/graphql/: builder.rs  client.rs  mod.rs  provider.rs  rate_limit.rs
crates/data_components/src/iceberg/: catalog.rs  mod.rs  provider.rs
crates/data_components/src/imap/: mod.rs  provider.rs  session.rs
crates/data_components/src/mssql/: connection_manager.rs  convert.rs  execution_plan.rs  mod.rs
crates/data_components/src/object/: metadata.rs  mod.rs  text.rs
crates/data_components/src/rate_limit/: mod.rs
crates/data_components/src/sharepoint/: client.rs  drive_items.rs  error.rs  mod.rs  table.rs
crates/data_components/src/spark_connect/: federation.rs
crates/data_components/src/spice_cloud/: catalog.rs  mod.rs  provider.rs
crates/data_components/src/unity_catalog/: provider.rs
crates/document_parse/: Cargo.toml
crates/document_parse/src/: docx.rs  lib.rs  pdf.rs
crates/llms/: Cargo.toml  build.rs
crates/llms/src/: accumulate.rs  config.rs  lib.rs  xai.rs
crates/llms/src/anthropic/: chat.rs  mod.rs  types.rs  types_stream.rs
crates/llms/src/chat/: mistral.rs  mod.rs
crates/llms/src/chunking/: mod.rs
crates/llms/src/embeddings/: mod.rs
crates/llms/src/openai/: chat.rs  embed.rs  mod.rs
crates/llms/src/perplexity/: chat.rs  mod.rs  types.rs
crates/llms/tests/: integration.rs
crates/llms/tests/llms/: create.rs  mod.rs  util.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/runtime/: .gitignore  Cargo.toml
crates/runtime/benches/: bench.rs  vector_search.rs
crates/runtime/benches/bench_delta/: mod.rs
crates/runtime/benches/bench_dremio/: mod.rs
crates/runtime/benches/bench_duckdb/: mod.rs
crates/runtime/benches/bench_mssql/: mod.rs  tpch_q12.sql  tpch_q19.sql
crates/runtime/benches/bench_mysql/: mod.rs
crates/runtime/benches/bench_object_store/: abfs.rs  file.rs  mod.rs  s3.rs
crates/runtime/benches/bench_odbc_athena/: mod.rs
crates/runtime/benches/bench_odbc_databricks/: mod.rs  tpcds_q32.sql  tpcds_q36.sql  tpcds_q44.sql  tpcds_q47.sql  tpcds_q49.sql  tpcds_q57.sql  tpcds_q6.sql  tpcds_q67.sql  tpcds_q70.sql  tpcds_q86.sql  tpcds_q92.sql  tpch_q2.sql
crates/runtime/benches/bench_postgres/: mod.rs
crates/runtime/benches/bench_search/: datasets.rs  evaluator.rs  mod.rs  setup.rs
crates/runtime/benches/bench_spark/: mod.rs
crates/runtime/benches/bench_spicecloud/: mod.rs
crates/runtime/benches/results/: mod.rs
crates/runtime/benches/setup/: mod.rs
crates/runtime/benches/snapshots/: bench__databricks_delta_tpcds_q12.snap  bench__databricks_delta_tpcds_q26.snap  bench__databricks_delta_tpcds_q47.snap  bench__databricks_delta_tpcds_q53.snap  bench__databricks_delta_tpcds_q89.snap  bench__dremio_tpcds_q51.snap  bench__dremio_tpcds_q66.snap  bench__dremio_tpcds_q83.snap  bench__dremio_tpcds_q91.snap  bench__dremio_tpch_q16.snap  bench__dremio_tpch_q18.snap  bench__dremio_tpch_q3.snap  bench__duckdb_tpch_simple_q3.snap  bench__duckdb_tpch_simple_q4.snap  bench__file_clickbench_q1.snap  bench__file_clickbench_q10.snap  bench__file_clickbench_q11.snap  bench__file_clickbench_q13.snap  bench__file_clickbench_q14.snap  bench__file_clickbench_q15.snap  bench__file_clickbench_q18.snap  bench__file_clickbench_q2.snap  bench__file_clickbench_q20.snap  bench__file_clickbench_q21.snap  bench__file_clickbench_q22.snap  bench__file_clickbench_q24.snap  bench__file_clickbench_q27.snap  bench__file_clickbench_q29.snap  bench__file_clickbench_q31.snap  bench__file_clickbench_q32.snap  bench__file_clickbench_q33.snap  bench__file_clickbench_q35.snap  bench__file_clickbench_q37.snap  bench__file_clickbench_q38.snap  bench__file_clickbench_q39.snap  bench__file_clickbench_q4.snap  bench__file_clickbench_q43.snap  bench__file_clickbench_q6.snap  bench__file_clickbench_q7.snap  bench__file_tpcds_q20.snap  (+477 more)
crates/runtime/benches/utils/: mod.rs
crates/runtime/src/: accelerated_table.rs  builder.rs  config.rs  dataaccelerator.rs  dataconnector.rs  datafusion.rs  datasets_health_monitor.rs  dataupdate.rs  extension.rs  flight.rs  http.rs  internal_table.rs  lib.rs  metrics.rs  object_store_registry.rs  opentelemetry.rs  parameters.rs  podswatcher.rs  rate_limits.rs  secrets.rs  spice_metrics.rs  status.rs  task_history.rs  timing.rs  tls.rs  topological_ordering.rs  tracers.rs  tracing_util.rs  view.rs
crates/runtime/src/accelerated_table/: federation.rs  metrics.rs  refresh.rs  refresh_task.rs  refresh_task_runner.rs  synchronized_table.rs
crates/runtime/src/auth/: mod.rs
crates/runtime/src/catalogconnector/: databricks.rs  iceberg.rs  mod.rs  spice_cloud.rs  unity_catalog.rs
crates/runtime/tests/: integration.rs  integration_models.rs
crates/spicepod/: Cargo.toml
crates/spicepod/src/: component.rs  lib.rs  reader.rs  spec.rs
crates/test-framework/: Cargo.toml
crates/test-framework/src/: lib.rs
crates/tpc_extension/: Cargo.toml
crates/tpc_extension/src/: lib.rs
tools/evalconverter/: .gitignore  Cargo.toml
tools/evalconverter/src/: eval.rs  main.rs
tools/spiceschema/: Cargo.toml
tools/spiceschema/src/: main.rs
tools/testoperator/: Cargo.toml  README.md
tools/testoperator/src/: main.rs
(+871 files in other folders)
