[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "llms"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu.workspace = true

async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures = { workspace = true }
hf-hub.workspace = true
insta = { workspace = true, features = ["filters"] }
regex = "1.10.4"
reqwest.workspace = true
reqwest-eventsource = "0.6.0"
schemars = "0.8.19"
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokenizers = { version = "0.21.0" }
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true

## For Chunking
text-splitter = { git = "https://github.com/spiceai/text-splitter.git", rev = "0c4d27f482cd7ef09ead3156ef0e7a2031458838", features = [
    "markdown",
    "tokenizers",
    "tiktoken-rs",
] }

pulldown-cmark = "0.12.1"
tiktoken-rs = "0.6.0"

mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "b2101b043a4ed28bd508faa57370c0394cce5e05", optional = true }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "b2101b043a4ed28bd508faa57370c0394cce5e05", optional = true, package = "mistralrs-core" }
rand = "0.8.5"
tei_backend = { package = "text-embeddings-backend", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "67b743e3a0babacd72f16ace46b51c49e8c5a672", features = [
    "candle",
] }
tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "67b743e3a0babacd72f16ace46b51c49e8c5a672" }
tei_candle = { package = "text-embeddings-backend-candle", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "67b743e3a0babacd72f16ace46b51c49e8c5a672" }
tei_core = { package = "text-embeddings-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "67b743e3a0babacd72f16ace46b51c49e8c5a672" }

either = "1.13.0"
indexmap = "2.7.0"
tempfile = "3.13.0"

[dev-dependencies]
anyhow = "1.0.86"
dotenvy.workspace = true
insta.workspace = true
jsonpath-rust = "0.7.3"
lazy_static.workspace = true
paste = "1.0.15"
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[features]
cuda = [
    "tei_backend/cuda",
    "tei_candle/cuda",
    "mistralrs-core/cuda",
    "mistralrs/cuda",
]
default = ["mistralrs"]
metal = [
    "tei_backend/metal",
    "tei_candle/metal",
    "mistralrs-core/metal",
    "mistralrs/metal",
]
mistralrs = ["dep:mistralrs", "dep:mistralrs-core"]
