[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "llms"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
snafu.workspace = true

async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures = { workspace = true }
hf-hub.workspace = true
insta = { workspace = true, features = ["filters"] }
regex = "1.10.4"
reqwest.workspace = true
reqwest-eventsource = "0.6.0"
schemars = "0.8.19"
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokenizers = { version = "0.21.0" }
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true

## For Chunking
text-splitter = { git = "https://github.com/spiceai/text-splitter.git", rev = "58f9c21006e01e5e968c5de80a0398b3f5ec439a", features = [
    "markdown",
    "tokenizers",
    "tiktoken-rs",
] }

pulldown-cmark = "0.12.1"
tiktoken-rs = "0.6.0"

mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "b8f7eab30b7ef54ec30d24b8de14b1583a277039" }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "b8f7eab30b7ef54ec30d24b8de14b1583a277039", package = "mistralrs-core" }
rand = "0.8.5"
tei_backend = { package = "text-embeddings-backend", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "a23f1aec8d53008a642cb632199d58d26fe88ae4", features = [
    "candle",
] }
tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "a23f1aec8d53008a642cb632199d58d26fe88ae4" }
tei_candle = { package = "text-embeddings-backend-candle", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "a23f1aec8d53008a642cb632199d58d26fe88ae4" }
tei_core = { package = "text-embeddings-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "a23f1aec8d53008a642cb632199d58d26fe88ae4" }

cudarc = { version = "0.12.2", optional = true, features = [
    "cuda-version-from-build-system",
] }
either = "1.13.0"
indexmap.workspace = true
tempfile.workspace = true


[dev-dependencies]
anyhow = "1.0.86"
dotenvy.workspace = true
insta.workspace = true
jsonpath-rust = "0.7.3"
paste.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[features]
cuda = [
    "tei_backend/cuda",
    "tei_candle/cuda",
    "mistralrs-core/cuda",
    "mistralrs-core/flash-attn",
    "mistralrs/cuda",
    "mistralrs/flash-attn",
    "dep:cudarc",
    "cudarc/cuda-version-from-build-system",
]
metal = [
    "tei_backend/metal",
    "tei_candle/metal",
    "mistralrs-core/metal",
    "mistralrs/metal",
]
