[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "test-framework"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
app = { path = "../app" }
spicepod = { path = "../spicepod" }
tempfile = "3"
anyhow = "1.0.95"
serde_yaml.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
regex.workspace = true
arrow = { workspace = true, features = ["prettyprint"] }
flight_client = { path = "../flight_client" }
futures.workspace = true
tonic.workspace = true
rustls.workspace = true
uuid = { workspace = true, features = ["v4"]}
sysinfo = "0.33.1"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[features]
