[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "test-framework"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.95"
app = { path = "../app" }
arrow = { workspace = true, features = ["prettyprint"] }
async-openai.workspace = true
clap.workspace = true
flight_client = { path = "../flight_client" }
futures.workspace = true
indicatif = "0.17.9"
octocrab = "0.43.0"
rand = "0.8.4"
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
spicepod = { path = "../spicepod" }
sysinfo = "0.33.1"
tempfile.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29", features = ["signal"] }
