[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "testoperator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
test-framework = { path = "../../crates/test-framework" }
clap.workspace = true
tokio.workspace = true

[features]