[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "testoperator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
test-framework = { path = "../../crates/test-framework" }
clap.workspace = true
tokio.workspace = true

[features]
default = []
duckdb = []
postgres = []
sqlite = []
mysql = []
flightsql = []
delta_lake = []
databricks = []
dremio = []
clickhouse = []
sharepoint = []
snowflake = []
spark = []
ftp = []
debezium = []
anonymous_telemetry = []
mssql = []
keyring-secret-store = []
aws-secrets-manager = []
odbc = []