[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "testoperator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
reqwest.workspace = true
test-framework = { path = "../../crates/test-framework" }
tokio.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
arrow-json.workspace = true

[features]
anonymous_telemetry = []
aws-secrets-manager = []
clickhouse = []
databricks = []
debezium = []
delta_lake = []
dremio = []
duckdb = []
flightsql = []
ftp = []
keyring-secret-store = []
imap = []
models = []
mssql = []
mysql = []
odbc = []
postgres = []
sharepoint = []
snowflake = []
spark = []
sqlite = []
